# turbiditech

./: Dockerfile  Pipfile  Procfile  README.md  fly.toml  manage.py  pyproject.toml  requirements.txt
accounts/: forms.py  views.py
api/: views.py
core/: admin.py  decorators.py  forms.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_component_component_name.py  0002_alter_customuser_profile_image.py  0002_alter_turbidityrecord_record_device.py  0002_alter_turbidityrecord_record_image.py  0002_customuser_profile_image.py  0003_alter_customuser_date_joined_and_more.py  0003_alter_customuser_profile_image.py  0003_alter_turbidityrecord_record_device.py  0003_alter_turbidityrecord_record_image.py  0004_alter_customuser_profile_image.py  0004_alter_customuser_profile_image_and_more.py  0004_alter_turbidityrecord_water_status.py  0005_adminupdate_alter_turbidityrecord_options_and_more.py  0005_alter_turbidityrecord_record_image.py  0006_alter_adminupdate_clean_alter_adminupdate_manual.py  0007_rename_clean_adminupdate_is_clean.py  0008_adminupdate_on_hold.py  (+1 more)
templates/: add-component.html  add-device.html  admin-update.html  dashboard.html  device-records.html  edit-component.html  edit-device.html  header.html  list-devices.html  login.html  register-complete.html  register.html  reset-password-complete.html  reset-password-confirm.html  reset-password-email.html  reset-password-sent.html  reset-password.html  signup.html  turbidity-records.html
turbiditech/: asgi.py  settings.py  urls.py  wsgi.py
(+17 files in other folders)
